Split the working app into components.

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Cody Hinz - Portfolio"
+      content="Cody Hinz - Full-stack Developer"
     />
-    <title>Cody Hinz - Portfolio</title>
+    <title>Cody Hinz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
