Added analytics data, updated title

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,16 @@
       name="description"
       content="Cody Hinz - Full-stack Developer"
     />
-    <title>Cody Hinz</title>
+    <title>Cody Hinz- Developer Extraordinaire</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L8SZS8NYQ2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-L8SZS8NYQ2');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
